Feb 26, 2020
  added loading of VGNC ids

Feb 07, 2020
  cytoband logic updated: fishband field is now mandatory for loading
  removed support for discontinued MAPS_DATA.BAND_TYPE field
  suppress nomenclature events for genes with NOMEN_SOURCE=HGNC

Feb 06, 2020
  inserted genes have 'gene_source' set to 'NCBI'
  updated dependency for oracle jdbc driver
  gene associations: added support for green monkey and naked mole rat

Jan 23, 2020
  added support for new species Naked Mole-Rat

Jan 22, 2020
  added support for new species Vervet (green monkey)

Dec 04, 2019
  code to delete redundant gene aliases have been moved to DataQcPipeline

Nov 26, 2019
  rat genes are loaded regardless of presence of sequences

Nov 25, 2019
  updated script for loading mitochondrial genes

Nov 22, 2019
  -for non-rat species: qc checks relaxed and new genes are loaded regardless if sequences are present or not
       also no sequence checking is performed, so sequences are always updated
  -improved handling of records where species name is different than specified on the command line
  -eUtils queries download all genes, not only the ones with sequences

Nov 12, 2019
  -fixed spring IOT code (no longer displaying two 'null' lines when the pipeline is starting)

Oct 24, 2019
  -discontinued use of rgd-pipelines library
  -replaced commons logging with log4j

Sep 12, 2019
  -added support for mouse assembly GRCm38.p6 and human assembly GRCh38.p13

May 10, 2019 - v.3.8.2
  -gene association loader: rewritten for simpler code and much better performance in highly parallel environment

May 3, 2019 - v.3.8.1
  -in nomenclature events PREVIOUS_SYMBOL and PREVIOUS_NAME are now always set
  
Feb 25, 2019 - v.3.8.0
  -updated to dbcp2

Feb 11, 2019 - v.3.7.9
  -moved BulkGeneMerger and NcbiGeneHistoryLoader into ncbi-gene-pipeline project

Jan 29, 2019 - v.3.7.8
  -added handling of PIG

Sep 28, 2018 - v.3.7.7
  -moved from subversion to github

Aug 8, 2018 - v.3.7.6